--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Estilos -->
   <link rel="stylesheet" href="style.css">
 </head>
+  <script>
+  alert("HTML cargó");
+</script>
 <body>
 
   <div class="container">
