--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <div>Página 4</div>
 </div>
 
-<!-- jQuery -->
+<!-- jQuery (PRIMERO) -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<!-- Turn.js (VERSIÓN CORRECTA) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
+<!-- Turn.js (ESTE SÍ FUNCIONA) -->
+<script src="https://cdn.jsdelivr.net/gh/blasten/turn.js@4/lib/turn.min.js"></script>
 
 <script>
   $(function () {
@@ -53,4 +53,3 @@
 
 </body>
 </html>
-
