--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
 
   <title>Libro HTML</title>
 
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- jQuery (OBLIGATORIO antes de turn.js) -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- Turn.js -->
-  <script src="turn.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4/turn.min.js"></script>
 </head>
 <body>
 
@@ -24,7 +20,7 @@
     <div class="page">Página 4</div>
   </div>
 
-  <!-- JS -->
   <script src="script.js"></script>
 </body>
 </html>
+
