--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Libro HTML</title>
 
   <link rel="stylesheet" href="style.css">
 
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Turn.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4/turn.min.js"></script>
 </head>
 <body>
@@ -20,7 +22,11 @@
     <div class="page">Página 4</div>
   </div>
 
+  <div class="controls">
+    <button id="prev">⬅ Anterior</button>
+    <button id="next">Siguiente ➡</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
