--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Libro HTML</title>
+  <title>Libro</title>
 
   <link rel="stylesheet" href="style.css">
 
-  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- Turn.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4/turn.min.js"></script>
 </head>
 <body>
@@ -22,9 +19,9 @@
     <div class="page">Página 4</div>
   </div>
 
-  <div class="controls">
-    <button id="prev">⬅ Anterior</button>
-    <button id="next">Siguiente ➡</button>
+  <div id="controls">
+    <button id="prev">Anterior</button>
+    <button id="next">Siguiente</button>
   </div>
 
   <script src="script.js"></script>
