--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Libro</title>
 
   <link rel="stylesheet" href="style.css">
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4/turn.min.js"></script>
+  <!-- StPageFlip -->
+  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.js"></script>
 </head>
 <body>
 
@@ -19,8 +20,8 @@
   </div>
 
   <div class="controls">
-    <button id="prev">Anterior</button>
-    <button id="next">Siguiente</button>
+    <button onclick="pageFlip.flipPrev()">Anterior</button>
+    <button onclick="pageFlip.flipNext()">Siguiente</button>
   </div>
 
   <script src="script.js"></script>
