--- a/index.html
+++ b/index.html
@@ -12,3 +12,21 @@
 </head>
 <body>
 
+  <div id="book">
+    <div class="page">Página 1</div>
+    <div class="page">Página 2</div>
+    <div class="page">Página 3</div>
+    <div class="page">Página 4</div>
+  </div>
+
+  <div class="controls">
+    <button id="prev">Anterior</button>
+    <button id="next">Siguiente</button>
+  </div>
+
+  <!-- PageFlip JS -->
+  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.js"></script>
+  <script src="script.js"></script>
+
+</body>
+</html>
