--- a/index.html
+++ b/index.html
@@ -3,41 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Libro</title>
+  <title>Libro con Música</title>
 
-  <!-- CSS de PageFlip (OBLIGATORIO) -->
+  <!-- PageFlip -->
   <link rel="stylesheet" href="https://unpkg.com/page-flip/dist/css/page-flip.css">
+  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.js"></script>
 
-  <!-- Tu CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- LIBRO -->
   <div id="book">
-    <!-- PORTADA -->
     <div class="page portada">
-      <img src="portada.jpg" alt="Portada del libro">
+      <img src="portada.jpg">
     </div>
-
-    <!-- PÁGINAS INTERNAS -->
     <div class="page">Página 1</div>
     <div class="page">Página 2</div>
     <div class="page">Página 3</div>
     <div class="page">Página 4</div>
   </div>
 
-  <!-- BOTONES -->
+  <!-- BOTONES DEL LIBRO -->
   <div class="controls">
     <button id="prev">Anterior</button>
     <button id="next">Siguiente</button>
   </div>
 
-  <!-- PageFlip JS -->
-  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.js"></script>
+  <!-- REPRODUCTOR -->
+  <div class="player">
+    <div id="disc" class="disc"></div>
+    <button id="playBtn">▶️</button>
+    <button id="muteBtn">🔊</button>
 
-  <!-- Tu JS (NO lo cambiamos) -->
+    <audio id="audio">
+      <source src="cancion.mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <!-- JS -->
   <script src="script.js"></script>
 
 </body>
 </html>
-
