--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="page">Página 4</div>
   </div>
 
-  <!-- AUDIO AUTOMÁTICO EN LOOP -->
+  <!-- AUDIO (sin controles, sin botones) -->
   <audio id="audio" autoplay loop muted>
     <source src="cancion.mp3" type="audio/mpeg">
   </audio>
