--- a/index.html
+++ b/index.html
@@ -2,37 +2,22 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <title>Libro con música</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Libro con Música</title>
 
-  <!-- PageFlip -->
-  <link rel="stylesheet" href="https://unpkg.com/page-flip/dist/css/page-flip.css">
-  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.js"></script>
-
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- LIBRO -->
-  <div id="book">
-    <div class="page portada">
-      <img src="portada.jpg">
-    </div>
-
-    <div class="page">Página 1</div>
-    <div class="page">Página 2</div>
-    <div class="page">Página 3</div>
-    <div class="page">Página 4</div>
-  </div>
-
-  <!-- AUDIO (sin controles, sin botones) -->
-  <audio id="audio" autoplay loop muted>
+  <!-- AUDIO -->
+  <audio id="audio" loop>
     <source src="cancion.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- JS -->
-  <script src="script.js"></script>
+  <div class="mensaje">
+    Toca la pantalla para activar la música 🎶
+  </div>
 
+  <script src="script.js"></script>
 </body>
 </html>
