--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Libro con música</title>
+  <title>Prueba Audio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- AUDIO -->
-  <audio id="audio" loop>
+  <h1>Prueba de audio</h1>
+
+  <audio controls>
     <source src="cancion.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
   </audio>
 
-  <div class="mensaje">
-    Toca la pantalla para activar la música 🎶
-  </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
