--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <div id="book">
   <!-- Portada -->
   <div class="page portada">
-    <img src="portada.jpg" alt="Portada">
+    <img src="portada.png" alt="Portada">
   </div>
 
-  <!-- Páginas con imágenes PNG -->
+  <!-- Páginas con imágenes -->
   <div class="page">
     <img src="pagina1.png" alt="Página 1" style="width:100%; height:100%; object-fit:cover;">
   </div>
