--- a/index.html
+++ b/index.html
@@ -27,25 +27,13 @@
       <img src="portada.jpg" alt="Portada">
     </div>
 
-    <!-- Páginas con imágenes -->
-    <div class="page">
-      <img src="pagina1.jpg" alt="Página 1" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-    <div class="page">
-      <img src="pagina2.jpg" alt="Página 2" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-    <div class="page">
-      <img src="pagina3.jpg" alt="Página 3" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-    <div class="page">
-      <img src="pagina4.jpg" alt="Página 4" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-    <div class="page">
-      <img src="pagina5.jpg" alt="Página 5" style="width:100%; height:100%; object-fit:cover;">
-    </div>
-    <div class="page">
-      <img src="pagina6.jpg" alt="Página 6" style="width:100%; height:100%; object-fit:cover;">
-    </div>
+    <!-- Páginas con imágenes JPG -->
+    <div class="page"><img src="pagina1.jpg" alt="Página 1"></div>
+    <div class="page"><img src="pagina2.jpg" alt="Página 2"></div>
+    <div class="page"><img src="pagina3.jpg" alt="Página 3"></div>
+    <div class="page"><img src="pagina4.jpg" alt="Página 4"></div>
+    <div class="page"><img src="pagina5.jpg" alt="Página 5"></div>
+    <div class="page"><img src="pagina6.jpg" alt="Página 6"></div>
   </div>
 
   <script src="script.js"></script>
