--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Libro interactivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Fuente Gelasio desde Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Gelasio&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -27,13 +30,50 @@
       <img src="portada.jpg" alt="Portada">
     </div>
 
-    <!-- Páginas con imágenes JPG -->
-    <div class="page"><img src="pagina1.jpg" alt="Página 1"></div>
-    <div class="page"><img src="pagina2.jpg" alt="Página 2"></div>
-    <div class="page"><img src="pagina3.jpg" alt="Página 3"></div>
-    <div class="page"><img src="pagina4.jpg" alt="Página 4"></div>
-    <div class="page"><img src="pagina5.jpg" alt="Página 5"></div>
-    <div class="page"><img src="pagina6.jpg" alt="Página 6"></div>
+    <!-- Página 2 -->
+    <div class="page">
+      <img src="pagina1.jpg" alt="Página 1">
+      <div class="texto-superpuesto">
+        <p>
+          Podría decir muchas cosas, que esto, que aquello, que lo otro, pero creo que realmente no hay manera correcta de definir lo que significas para mí.
+        </p>
+      </div>
+    </div>
+
+    <!-- Página 3 -->
+    <div class="page">
+      <img src="pagina2.jpg" alt="Página 2">
+      <div class="texto-superpuesto">
+        <p>
+          Lo cual es chistoso, porque aunque parece poco tiempo (fue quizá hace medio año, tal vez más, tal vez menos que "empezó"), siempre es curioso cuando aun sin esperar nada, terminas queriendo todo, ¿no?
+        </p>
+      </div>
+    </div>
+
+    <!-- Página 4 -->
+    <div class="page">
+      <img src="pagina3.jpg" alt="Página 3">
+      <div class="texto-superpuesto">
+        <p>
+          Cuando incluso por cosas tan simples terminé queriendo verte sonreír, y sin saberlo, y tal vez sin siquiera necesitarlo...
+        </p>
+      </div>
+    </div>
+
+    <!-- Página 5 -->
+    <div class="page">
+      <img src="pagina4.jpg" alt="Página 4">
+      <div class="texto-superpuesto">
+        <p>
+          Te volviste el caos entre tanta monotonía que en ese momento tenía mi vida.
+        </p>
+      </div>
+    </div>
+
+    <!-- Página 6 (libre) -->
+    <div class="page">
+      <img src="pagina5.jpg" alt="Página 5">
+    </div>
   </div>
 
   <script src="script.js"></script>
