--- a/index.html
+++ b/index.html
@@ -33,46 +33,30 @@
     <!-- Página 2 -->
     <div class="page">
       <img src="pagina1.jpg" alt="Página 1">
-      <div class="texto-superpuesto">
-        <p>
-          Podría decir muchas cosas, que esto, que aquello, que lo otro, pero creo que realmente no hay manera correcta de definir lo que significas para mí.
-        </p>
-      </div>
     </div>
 
     <!-- Página 3 -->
     <div class="page">
       <img src="pagina2.jpg" alt="Página 2">
-      <div class="texto-superpuesto">
-        <p>
-          Lo cual es chistoso, porque aunque parece poco tiempo (fue quizá hace medio año, tal vez más, tal vez menos que "empezó"), siempre es curioso cuando aun sin esperar nada, terminas queriendo todo, ¿no?
-        </p>
-      </div>
     </div>
 
     <!-- Página 4 -->
     <div class="page">
       <img src="pagina3.jpg" alt="Página 3">
-      <div class="texto-superpuesto">
-        <p>
-          Cuando incluso por cosas tan simples terminé queriendo verte sonreír, y sin saberlo, y tal vez sin siquiera necesitarlo...
-        </p>
-      </div>
     </div>
 
-    <!-- Página 5 -->
+    <!-- Página 5: frase en grande -->
     <div class="page">
       <img src="pagina4.jpg" alt="Página 4">
-      <div class="texto-superpuesto">
-        <p>
-          Te volviste el caos entre tanta monotonía que en ese momento tenía mi vida.
-        </p>
+      <div class="frase-central">
+        Te volviste el caos entre tanta monotonía
       </div>
     </div>
 
-    <!-- Página 6 (libre) -->
+    <!-- Página 6: imagen superpuesta en JPG -->
     <div class="page">
       <img src="pagina5.jpg" alt="Página 5">
+      <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
     </div>
   </div>
 
