--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <!-- Página 6: imagen superpuesta en JPG -->
+    <!-- Página 6: imagen superpuesta en JPG, centrada -->
     <div class="page">
       <img src="pagina5.jpg" alt="Página 5">
       <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
