--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="page">
       <img src="pagina4.jpg" alt="Página 4">
       <div class="frase-central">
-        <span class="enfasis">Te volviste el caos entre tanta monotonía</span>
+        <span class="enfasis">Te volviste caos entre tanta monotonía</span>
       </div>
     </div>
 
